# p4est_simplex_mesh

./: .gitignore  Makefile  Makefile.am  TODO  extract_logged_stats.py  mk_run.sh  p4est_simplex_mesh.c  p4est_simplex_mesh.h  p4est_simplex_to_gmsh.c  p4est_simplex_to_gmsh.h  p8est_simplex_mesh.c  p8est_simplex_mesh.h  p8est_simplex_to_gmsh.c  simplex2.c  simplex2.h  simplex3.c  simplex3.h  statistics.c  statistics.h  stats.csv  utils.c  utils.h
logs/: simplex_d3_n16_sphere_l8_L8.log_unused
