# This file is part of p4est.
# Makefile.am in example/simple
# included non-recursively from toplevel directory

if P4EST_ENABLE_BUILD_2D
bin_PROGRAMS += example/simplex/simplex2
example_simple_p4est_simplex_SOURCES = example/simplex/simplex2.c
endif

if P4EST_ENABLE_BUILD_3D
bin_PROGRAMS += example/simplex/simplex3
example_simple_p8est_simplex_SOURCES = example/simplex/simplex3.c
endif
